# ranky

./: db.sqlite3  manage.py  pyproject.toml
accounts/: tests.py  urls.py  views.py
accounts/templates/: profile.html  register.html  signin.html
home/: admin.py  helper.py  models.py  tests.py  urls.py  views.py
home/migrations/: 0001_initial.py  0002_delete_reviews_delete_userprofile.py  0003_initial.py  0004_comment.py
home/templates/: detail.html  home.html
ranky/: asgi.py  settings.py  urls.py  wsgi.py
static/css/: base.css  card.css  profile.css
static/js/: scroll.js
templates/: _base.html  header.html
