[tool.poetry]
name = "ranky"
version = "0.1.0"
description = ""
authors = ["mavhungutrezzy <mavhungutrezzy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
Django = "^4.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
