[tool.poetry]
name = "ranky"
version = "0.1.0"
description = ""
authors = ["mavhungutrezzy <mavhungutrezzy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
Django = "^4.1.2"
django-admin-tailwind = "^0.0.16"
sodapy = "^2.2.0"
pandas = "^1.5.1"
python-dotenv = "^0.21.0"
django-redis = "^5.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
